--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,28 @@ body,
 .content {
   height: 100%;
   width: 100%;
+  font-family: 'Source Sans Pro', Lora
 }
 
 .app {
   display: flex;
   positon: relative;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
