Fixed react errors wueh!

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@ code {
     monospace;
 } */
 
-<style>
+/* <style>
   @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&display=swap');
-</style>
+</style> */
 
 html,
 body,
